--- a/websocket-tcp-udp/image-client/public/index.html
+++ b/websocket-tcp-udp/image-client/public/index.html
@@ -4,6 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>TCP / UDP</title>
+    <style>
+      body {
+        font-family: sans-serif;
+        padding: 30px 50px;
+      }
+    </style>
   </head>
   <body>
     <div id="root"></div>
